Version 1.2 (List<List<Pair>>)
Pair(Token, String)